2011-12-12 mmichaud <michael.michaud@free.fr>
    * Small improvements in the user interface
      - back to small icons for Open wizard in File menu and layer context menu
      - add icon for File > Add Image Layer menu item
      - center dialog box for CalculateAreasAndLengthsPlugIn
      - center dialog box for JoinWithArcPlugIn
      - JoinAttributesSpatially : typo (no ellipsis needed in dialog box)

2011-12-11 Matthias Scholz <ms@jammerhund.de>
	* com.vividsolutions.jump.workbench.ui.plugin.FirstTaskFramePlugIn
		* If we start OJ with a project file, now this is done with the new
		  OpenProjectPlugIn. So the user can see what OJ are doing.
	* com.vividsolutions.jump.workbench.ui.plugin.imagery.AddImageLayerPlugIn
		* Added an enablecheck. This prevets a NPE if no projectwindow is open.

2011-12-11 mmichaud <michael.michaud@free.fr>
    * Fixed bug 3441486 : popupMenu did not show the same plugins in InfoFrame
      and in ViewAttributes. Now works in a more consistent way.

2011-12-10 mmichaud <michael.michaud@free.fr>
    * Fixed bug 3456437 throwing a IndexOutOfBoundException in
      ViewAttributesPlugIn and FeatureInfoPlugIn

2011-12-10 garuta <giuseppe_aruta@yahoo.it>
    * Add extra Classes to handle additions within a formula
    in de.fho.jump.pirol.utilities.FormulaParsing.Operations folder

2011-12-04 mmichaud <michael.michaud@free.fr>
    * Now accept a zipped shapefile without dbf file
    * SimpleQueryPlugIn : fixed bug 3442147 (plugin could show wrong layer list 
      when two projects were opened).

2011-12-02 garuta <giuseppe_aruta@yahoo.it>
	* Add small icons (16x16) to NewTaskPlugIn and SaveDatasetsPlugIn
	  in the top/context menus

2011-11-23 mmichaud <michael.michaud@free.fr>
    * Replaced 3 first icons in the toolbar thanks to Peppe (previous one
      did not have the regular 20x20 size.

2011-11-21 mmichaud <michael.michaud@free.fr>
    * Remove FillPatterns from src directory
    
2011-11-20 mmichaud <michael.michaud@free.fr>